2008-10-29  Alex Schroeder  <alex@gnu.org>

	* modules/translation-links.pl (DoTranslationLink): Report a lot
	more errors. Add more explanation.
	($TranslationLinkHelpPage): New option.

2008-10-28  Alex Schroeder  <aschroeder@localhost>

	* modules/translation-links.pl (TranslationLinkNewGetFooterLinks):
	Fix links generated with %TranslationLinkTarget.
	(DoTranslationLink): Added better summary.

2008-10-26  Alex Schroeder  <alex@gnu.org>

	* modules/search-freetext.pl (OddMuse::Tokenize): Make the regexp
	reusable outside the class.
	(process): Use it.
	(NewSearchFreeTextTitleAndBody): No longer strip quotes from tags.
	(SearchFreeTextGet): Rewrote phrase handling so that tags can be
	made mandatory by enclosing them with quotes, but making sure that
	extra effort is only spent if there are multiple search terms.
	Also if the terms are in fact whole tokens and not just any
	phrase, avoid looking opening the page files and doing a regular
	search.

2008-10-25  Alex Schroeder  <alex@gnu.org>

	* modules/toc.pl (TocRule, TocHeadings): Make sure no h1 headers
	can be generated. This makes sure that the headings work just like
	they do in the UseMod markup extension.

2008-10-24  Alex Schroeder  <alex@gnu.org>

	* modules/search-freetext.pl (process): Allow underscore in
	tokens (foo_bar).
	(SearchFreeTextTagsRule): Add double quotes around tags that
	contain a space ("foo bar"). This should work for technorati links
	and the like.
	(SearchFreeTextIndex): When indexing a tag containing a space, use
	underscores instead ([[tag:foo bar]] is indexed as foo_bar).
	(SearchFreeTextCloud): When showing a tag containing an
	underscore, replace it with space (foo bar).
	(NewSearchFreeTextTitleAndBody): When searching for tags, strip
	quotes and replace spaces with underscores. Searching for tag:"foo
	bar" will thus result in a search for the tag foo_bar.
	(SearchFreeTextGet): No longer tags a tag flag as an argument.